<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".RegistroUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"

        android:paddingLeft="24dp"
        android:orientation="vertical"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logoma" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit01"
            android:drawableLeft="@drawable/email"
            android:hint="@string/valetCorreo"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@android:color/background_dark" />

        <EditText
            android:id="@+id/etUsuarioNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit01"
            android:drawableLeft="@drawable/user"
            android:hint="@string/valetUsuario"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@android:color/background_dark"

            />

        <EditText
            android:id="@+id/etPasswordNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit01"
            android:drawableLeft="@drawable/password2"
            android:hint="@string/valetPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/background_dark"
            app:passwordToggleEnabled="true" />


        <CheckBox
            android:id="@+id/cbAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/valcbTerminos"
            android:textColor="@android:color/white"
            android:textSize="15dp" />


        <Button
            android:id="@+id/btnNuevoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="50dp"
            android:padding="20dp"
            android:text="@string/valbtnNuevoUsuario"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            app:backgroundTint="#00008B" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>